--- a/odev-Customer/pom.xml
+++ b/odev-Customer/pom.xml
@@ -52,13 +52,34 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-		
+		<!-- https://mvnrepository.com/artifact/junit/junit -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+
+
 		<!-- https://mvnrepository.com/artifact/org.junit.platform/junit-platform-commons -->
+
+<!-- https://mvnrepository.com/artifact/org.mockito/mockito-all -->
+
+<!-- https://mvnrepository.com/artifact/org.powermock/powermock-api-mockito2 -->
+
+<!-- https://mvnrepository.com/artifact/org.powermock/powermock-module-junit4 -->
+
+
+<!-- https://mvnrepository.com/artifact/org.mockito/mockito-inline -->
 <dependency>
-    <groupId>org.junit.platform</groupId>
-    <artifactId>junit-platform-commons</artifactId>
-    <version>1.5.1</version>
+    <groupId>org.mockito</groupId>
+    <artifactId>mockito-inline</artifactId>
+    <version>3.3.3</version>
+    <scope>test</scope>
 </dependency>
+
+
+
 
 	</dependencies>
 
