--- a/odev-Customer/src/main/resources/application.properties
+++ b/odev-Customer/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/smarteraOdev?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=Egehaneralp99
 
 
