--- a/odev-Order/pom.xml
+++ b/odev-Order/pom.xml
@@ -18,11 +18,44 @@
 		<java.version>1.8</java.version>
 	</properties>
 
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>Greenwich.SR3</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+
+
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-openfeign -->
+
+
+		<!-- SONRADAN EKLENEN DEPENDENCY LER-->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-dependencies -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-dependencies</artifactId>
+			<version>Greenwich.SR3</version>
+			<type>pom</type>
+			<scope>runtime</scope>
+		</dependency>
+		<!-- SONRADAN EKLENEN DEPENDENCY LER-->
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -59,13 +92,31 @@
     <artifactId>junit-platform-commons</artifactId>
     <version>1.5.1</version>
 </dependency>
-
 <dependency>
-    <groupId>com.smartera</groupId>
-	<artifactId>odev-Customer</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-
+	<groupId>junit</groupId>
+	<artifactId>junit</artifactId>
+	<version>4.12</version>
+	<scope>test</scope>
 </dependency>
+
+		<!-- SONRADAN EKLENEN DEPENDENCY LER-->
+<!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-openfeign -->
+<dependency>
+    <groupId>org.springframework.cloud</groupId>
+    <artifactId>spring-cloud-starter-openfeign</artifactId>
+    <version>2.2.2.RELEASE</version>
+</dependency>
+
+
+<!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-dependencies -->
+<dependency>
+    <groupId>org.springframework.cloud</groupId>
+    <artifactId>spring-cloud-dependencies</artifactId>
+    <version>Greenwich.SR3</version>
+    <type>pom</type>
+    <scope>runtime</scope>
+</dependency>
+		<!-- SONRADAN EKLENEN DEPENDENCY LER-->
 
 
 	</dependencies>
